--- a/Website LRF theme/scss/base/_page.scss
+++ b/Website LRF theme/scss/base/_page.scss
@@ -56,6 +56,9 @@ h6 {
   text-shadow: none;
 }
 
+.img-detail{
+    padding-bottom: 2em;
+}
 ::selection {
   background: $primary;
   text-shadow: none;
